k8s/customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      containers:
        - name: customer-service
          image: ecomacr123.azurecr.io/customer-service:manual
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  type: ClusterIP
  selector:
    app: customer-service
  ports:
    - port: 8000
      targetPort: 8000
